saving read me progress and fix to spacing on drawer menu

--- a/client/src/layouts/Layout/Layout.css
+++ b/client/src/layouts/Layout/Layout.css
@@ -11,6 +11,8 @@
 .user-links-drawer a, 
 .user-links-drawer button, 
 .non-user-links-drawer a {
+  align-items: center;
+  display: flex;
   margin: 5px 0;
 }
 
